--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         
         <!-- Smart Recommendations Sidebar -->
         <div class="sidebar">
-            <h2>💡 BUFFER SlowYield Recommendations</h2>
+            <h2>💡 BUFFER SYDA Recommendations</h2>
             
             <div class="buffer-recommend" id="buffer-recommend">
                 Enter parameters for instant recommendations...
